--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 
 <!-- Site navigation menu -->
-<ul class="navbar">
+<ol class="navbar">
   <li><a href="index.html">Home page Editing for the new commit test</a>
-  <li><a href="musings.html">Musings</a>
+  <li><a href="musings.html">Musings ordered list crazy idea</a>
   <li><a href="town.html">My town</a>
-  <li><a href="links.html">Links</a>
+  <li><a href="links.html">branch Links</a>
 </ul>
 
 <!-- Main content -->
